# Django_proj_HW_10

./: dev-docker-compose.yaml  pyproject.toml
quotes/quoteapp/: forms.py  models.py  urls.py  views.py
quotes/quoteapp/migrations/: 0001_initial.py
quotes/quoteapp/static/: main.css
quotes/quoteapp/templates/: author.html  author_detail.html  base.html  detail.html  index.html  quote.html  tag.html
quotes/quotes/: settings.py
quotes/users/: urls.py  views.py
quotes/users/templates/: password_reset.html  password_reset_confirm.html  password_reset_email.html
